Mon Jan  8 09:55:48 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Rename lynx variable to browser. Check for
	  www-browser (as on Debian) before lynx.
	* include/manconfig.h.in: Rename lynx variable to browser.

Mon Jan  8 09:15:04 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/mandb.c (main): If no database changes were necessary, then:
	  don't bother committing database changes or running straycats;
	  only exit non-zero if the -c option was given; only emit "No
	  databases updated" message (should be "No databases created" now)
	  if the -c option was given but not -q, to help automatic
	  invocation from man.

Sun Jan  7 23:54:18 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (make_roff_command): Don't try to pass -X or -P-g
	  options to eqn, only troff (Debian bug #327772).

Sun Jan  7 21:16:57 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* man/man1/man.man1 (SYNOPSIS, OPTIONS): Document -X option (thanks,
	  Sam Morris; Debian bug #360112).

Sun Jan  7 20:58:16 GMT 2007  Colin Watson  <cjwatson@debian.org>

	Add cross-references to mandb in apropos and whatis documentation
	(thanks, Phil Endecott; Debian bug #388755).

	* man/man1/apropos.man1 (DESCRIPTION): Mention that the database is
	  updated by mandb.
	  (SEE ALSO): Refer to mandb(8).
	* man/man1/whatis.man1 (DESCRIPTION, SEE ALSO): Likewise.

Sun Jan  7 20:51:27 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (parse_layout): Actually check upper-cased version
	  of layout rather than creating it and then ignoring it.

Sun Jan  7 20:48:58 GMT 2007  Colin Watson  <cjwatson@debian.org>

	Fix a slew of memory leaks, including a nasty per-search leak in
	apropos (Debian bug #368749).

	* include/manconfig.h.in (ATTRIBUTE_UNUSED): Define to an attribute
	  marking a variable as unused if using GCC 2.4 or newer.

	* lib/error.c (error): Free program_name before exiting.
	* src/accessdb.c (main): Put program_name in allocated memory.